force-app/main/default/objects/Materiale_Marketing__c/Materiale_Marketing__c.object-meta.xml
<CustomObject>
    <label>Materiale Marketing</label>
    <nameField>
        <label>Materiale Marketing Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Materiali Marketing</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>