force-app/main/default/objects/Materiale_Marketing__c/fields/Descrizione__c.field-meta.xml
<CustomField>
    <fullName>Descrizione__c</fullName>
    <label>Descrizione</label>
    <type>TextArea</type>
</CustomField>